Fix: Z-index of canvas is higher than game over window

--- a/styles.css
+++ b/styles.css
@@ -154,7 +154,7 @@ body {
 	color: var(--text-white);
 	backdrop-filter: blur(2px);
 	user-select: none;
-	z-index: 2;
+	z-index: 3;
 }
 .game_over .message {
 	display: flex;
@@ -190,7 +190,7 @@ body {
 	width: 100%;
 	height: 35px;
 	bottom: 0;
-	z-index: 1;
+	z-index: 2;
 	background-image: url(./imgs/objects/backgrounds/grounds/ground_01.png);
 	background-size: contain;
 	background-repeat: repeat;
